test/2/py/load-var.err
muck error: test/2/py/load-var.py:4:6: first argument must be a string literal; found Name.
  load(x)
       ^
