test/2/py/load-var.py
import muck

x = 'x.txt'
muck.load(x)